[workspace]
resolver = "2"
members = [
    "crates/orion-engine",
    "crates/orion-mesh",
    "crates/orion-renderer",
    "crates/orion-sdf",
    "crates/orion-systems",
    "crates/orion-voxels"
]

[workspace.dependencies]
orion-sdf = {path = "crates/orion-sdf"}

bevy = "0.18.1"
bevy_dev_tools = "0.18.1"
ndshape = "0.3.0"